app/deploy/k3s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mxtac
  labels:
    app.kubernetes.io/part-of: mxtac
